# Chatroom.AI

./: .gitignore  AI Table.slnx  Chatroom.AI.slnx
AI Table/: AI Table.sln  App.axaml  App.axaml.cs  Chatroom.AI.csproj  Program.cs  ViewLocator.cs  app.manifest
AI Table/Core/: LLMKernelService.cs  ModelResponse.cs  SseChunk.cs  TTSKernelService.cs  ToolCall.cs
AI Table/Extensions/: Result.cs
AI Table/Models/: DialogContextManager.cs  OpenRouterLlmDescription.cs  Persona.cs
AI Table/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
AI Table/Views/: MainWindow.axaml  MainWindow.axaml.cs  ModelPersonaEditor.axaml
Chatroom.AI/: Chatroom.AI.csproj  ViewLocator.cs
Chatroom.AI/Core/: ContextMessage.cs  ToolCall.cs
Chatroom.AI/Utils/: Assert.cs  AssertionException.cs
Chatroom.AI/ViewModels/: MainWindowViewModel.cs
Chatroom.AI/Views/: MainWindow.axaml.cs  ModelPersonaEditor.axaml.cs
TTSKernel/: CMakeLists.txt  ex_reply_config.json  ex_request_config.json  ex_request_say.json
TTSKernel/src/: main.cxx  pch.hxx  pipechannel.cxx  pipechannel.hxx  service.cxx  service.hxx  tts_onnx.cxx  tts_onnx.hxx  websocket.cxx  websocket.hxx
llm-kernel/: .env  Arch.md  config.json  main.py  pyproject.toml
llm-kernel/proto/: messages.proto
llm-kernel/src/api/routes/: health.py  models.py  settings.py
llm-kernel/src/core/: message_builder.py  openrouter.py
llm-kernel/src/models/: config.py  openrouter.py  requests.py  responses.py
llm-kernel/src/server/: app.py  protocol.py  websocket.py
llm-kernel/src/utils/: config.py  logging.py
llm-kernel/static/: admin.html
